website/static/css/main.css
body {
    background: url(../images/backgrounds/background-texture3.png) repeat top left;
    font-family: "ff-meta-web-pro", sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-font-smoothing: antialiased;
}

.main-title {
    font-family: 'Racing Sans One', Arial;
}

.section-title {
    font-family: 'Lemon', Arial;
}

.blue-box {
    background: #b2cecf;
    /*background: #8ab3c2;*/
    /*background: rgba(0, 102, 153, 0.3);*/
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    border: 1px solid #8ca8b3;
}

.white-box {
    background: #e9efef;
    background: rgba(255, 255, 255, 0.6);
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    border: 1px solid #b2bab7;
}

.color-4 {
    color: #50d07d;
}

.color-3 {
    color: #8ca8b3;
}

.color-2 {
    color: #d02552;
}

.color-1 {
    color: #b2cecf;
}

/* Hover Text  --------------------------------------  */

.hover-text {
    height: 270px;
    padding: 0 20px;
}

.hospital-name {
    font-family: helvetica sans-serif;
    font-size: 16px;
    line-height: 20px;
    margin-bottom: 20px;
    word-wrap: break-word;
    width: 350px
}

.hover-label {
    font-size: 16px;
    height: 50px;
}

.hover-data {
    font-size: 25px;
    color: #ffff0f;
    line-height: 30px;
    margin-bottom: 30px;
}

.pull-left {
    float: left;
}

.pull-right {
    float: right;
}

.hover-row {
    font-size: 14px;
}

.lcol {
    text-align: left;
    float: left;
    width: 150px;
}

.progress-bar-background {
    height: 5px;
    background-color: gray;
    width: 200px;
}

.progress-bar {
    height: 5px;
    background-color: red;
}

/* Hospital List  ---------------------------------  */

.h-row {
    margin: 2px 0;
    padding: 10px;
    border: solid #888 1px;
    background: #cfeced;

    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    -ms-border-radius: 5px;
    -o-border-radius: 5px;
    border-radius: 5px;

    clear: both;
}

.h-row .hbill {
    margin-top: 15px;
}

.hlist {
    color: #333;
    padding: 10px 10px;
}

.h-numbers {
    vertical-align: middle;
    color: #333;
}

.h-row .hname {
    margin-bottom: 15px;
    font-weight: bold;
    line-height: 15px;
}

.min-max-box {
    margin-top: 20px;
    overflow-y: scroll;
    height: 450px;
}

.min-max-box-header {
    color: #333;
    font-size: 20px;
    line-height: 28px;
}

.zipcode-selector {
    text-align: center;
}

.zipcode-selector input {
    vertical-align: top;
}

.zipcode-selector input[type="text"] {
    width: 100px;
}

.h-row:hover {
    background-color: #73a5cc;
}

/* ------------------------------------------------  */

.post-img, .post-img a {
    display: block;
    position: relative;
}

.post-img {
    margin-bottom: 13px;
}

.post-img img {
    padding: 0 !important;
}

.post-img a:after {
    content: ' ';
    display: block;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    opacity: 0;
    margin: 0;
}

.post-img a:hover:after {
    background-color: #000;
    opacity: 0.2;
}

.post-img p {
    position: absolute;
    bottom: 6px;
    right: 0;
    margin: 0;
    color: #fff;
    font-size: .8em;
    background-color: rgba(0, 0, 0, 0.4);
    padding: 0 .25em;
}

#default_image {
    height: 300px;
    margin-top: 80px;
}

#drug_name {
    display: inline;
    width: 600px;
}

.instructions {
    font-size: 22px;
    line-height: 35px;
}

.big-arrow {
    margin-bottom: 30px;
}

.big-top-margin {
    margin-top: 60px;
}

.news-image {
    height: 105px;
}

.image-col {
    float: left;
    width: 200px;
    text-align: center;
}

.border-row {
    margin: 2px 0;
    padding: 10px;
    border: solid #ddd 1px;

    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    -ms-border-radius: 5px;
    -o-border-radius: 5px;
    border-radius: 5px;

    clear: both;
}

.news-row {
    background-color: #F5F5F5;
    height: 110px;
}

.chart-title {
    background: #F5F5F5;

    border: solid #ddd 1px;
    border-bottom: none;

    padding: 10px 10px 20px 10px;

    -webkit-border-top-left-radius: 8px;
    -webkit-border-top-right-radius: 8px;
    -moz-border-radius-topleft: 8px;
    -moz-border-radius-topright: 8px;
    -ms-border-top-left-radius: 8px;
    -ms-border-top-right-radius: 8px;

    clear: both;
}

.chart-title p {
    font-size: 20px;
}

.chart-title h4 {
    margin-top: 15px;
}

.chart-body {
    border: solid #ddd 1px;
    border-top: none;
    padding: 10px;

    -webkit-border-bottom-left-radius: 5px;
    -webkit-border-bottom-right-radius: 5px;
    -moz-border-radius-bottomleft: 5px;
    -moz-border-radius-bottomright: 5px;
    -ms-border-bottom-left-radius: 5px;
    -ms-border-bottom-right-radius: 5px;

    clear: both;
}

/* ------ SVG style ------------------------------------------  */

.axis path,
.axis line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}

.highlighted {
    fill: #73A5CC;
    stroke: #000;
    opacity: .8;
}

